重写通讯管理器